--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "api for propigator",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
